--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "core-js": "^3.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "core-js": "^3.9.0"
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   }
 }
